--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Bienvenid@</a></li>
 							<li><a href="generic.html">Bots</a></li>
-							<li><a href="elements.html">Recurso 3</a></li>
+							<li><a href="elements.html">Elige a tu científic@</a></li>
                                                         <li><a href="Juegos.html">Juegos</a></li>
+							<li><a href="mujeres al poder.html">Mujeres al poder</a></li>
+							<li><a href="recurso 7.html">Acerca de mí</a></li>
+							<li><a href="STEM NEWS.html">STEM NEWS</a></li>
 						</ul>
 						</ul>
 					</nav>
