--- a/generic.html
+++ b/generic.html
@@ -25,8 +25,11 @@
 						<ul class="links">
 							<li><a href="index.html">Bienvenid@</a></li>
 							<li class="active"><a href="generic.html">Bots</a></li>
-							<li><a href="elements.html">Recurso 3</a></li>
-							<li><a href="Juegos.html">Juegos</a></li>
+							<li><a href="elements.html">Elige a tu científic@</a></li>
+                                                        <li><a href="Juegos.html">Juegos</a></li>
+							<li><a href="mujeres al poder.html">Mujeres al poder</a></li>
+							<li><a href="recurso 7.html">Acerca de mí</a></li>
+							<li><a href="STEM NEWS.html">STEM NEWS</a></li>
 						</ul>
 						</ul>
 					</nav>
