--- a/elements.html
+++ b/elements.html
@@ -27,6 +27,9 @@
 							<li><a href="generic.html">Bots</a></li>
 							<li class="active"><a href="elements.html">Recurso 3</a></li>
 							<li><a href="Juegos.html">Juegos</a></li>
+							<li><a href="mujeres al poder.html">Mujeres al poder</a></li>
+							<li><a href="recurso 7.html">Acerca de mí</a></li>
+							<li><a href="STEM NEWS.html">STEM NEWS</a></li>
 						</ul>
 						</ul>
 					</nav>
