--- a/elements.html
+++ b/elements.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Recurso 3</a>
+						<a href="index.html" class="logo">Elige a tu científic@</a>
 					</header>
 
 				<!-- Nav -->
