--- a/Juegos.html
+++ b/Juegos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
+	STEMDOOR
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -25,15 +25,14 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li class="active"><a href="elements.html">Elements Reference</a></li>
+							<li><a href="index.html">Bienvenid@</a></li>
+							<li><a href="generic.html">Bots</a></li>
+							<li><a href="elements.html">Elige a tu científic@</a></li>
+							<li class="active"><a href="juegos.html">Juegos</a></li>
+							<li><a href="mujeres al poder.html">Mujeres al poder</a></li>
+							<li><a href="recurso 7.html">Acerca de mí</a></li>
+							<li><a href="STEM NEWS.html">STEM NEWS</a></li>
 						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
