--- a/elements.html
+++ b/elements.html
@@ -25,7 +25,7 @@
 						<ul class="links">
 							<li><a href="index.html">Bienvenid@</a></li>
 							<li><a href="generic.html">Bots</a></li>
-							<li class="active"><a href="elements.html">Recurso 3</a></li>
+							<li class="active"><a href="elements.html">Elige a tu científic@</a></li>
 							<li><a href="Juegos.html">Juegos</a></li>
 							<li><a href="mujeres al poder.html">Mujeres al poder</a></li>
 							<li><a href="recurso 7.html">Acerca de mí</a></li>
