--- a/STEM NEWS.html
+++ b/STEM NEWS.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	STEMDOOR
 -->
 <html>
 	<head>
-		<title>Elements Reference - Massively by HTML5 UP</title>
+		<title>STEM NEWS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,21 +17,23 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">STEM NEWS</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
+							<li><a href="index.html">Bienvenid@</a></li>
+							<li><a href="generic.html">Bots</a></li>
+							<li><a href="elements.html">Elige a tu científic@</a></li>
+							<li><a href="Juegos.html">Juegos</a></li>
+							<li><a href="mujeres al poder.html">Mujeres al poder</a></li>
+							<li><a href="recurso 7.html">Acerca de mí</a></li>
+							<li class="active"><a href="STEM NEWS.html">STEM NEWS</a></li>
 							<li><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li class="active"><a href="elements.html">Elements Reference</a></li>
 						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
