--- a/recurso 7.html
+++ b/recurso 7.html
@@ -52,58 +52,50 @@
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
+				<!-- Footer -->					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+								<h1>Adfectus</h1>
 								<div class="fields">
 									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
+									<iframe
+									allow="microphone;"
+									width="350"
+									height="660"
+									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
+									</iframe>
+								<h1>    </h1>
+								<h1>    </h1>
+								<h1>Sofía</h1>
+								<div class="fields">
 									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
+									<iframe
+									allow="microphone;"
+									width="350"
+									height="630"
+									src="https://console.dialogflow.com/api-client/demo/embedded/f09490bf-e3c0-49bd-aff8-499bb7e647c4">
+									</iframe>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Paso 1</h3>
+								<p>Saludar a Meli enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
 							</section>
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<h3>Paso 2</h3>
+								<p>Escribir el mensaje que desees. Pueden ser sugerencias, comentarios, recomendaciones, etc.</p>
 							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
+						</section>
 						</section>
 					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; STEMDOOR</li><li>By Abigail Monge R.</a></li></ul>
 					</div>
 
 			</div>
