--- a/STEM NEWS.html
+++ b/STEM NEWS.html
@@ -76,17 +76,15 @@
 											<tfoot>
 												<tr>
 													<td colspan="2"></td>
-													<td>100.00</td>
 												</tr>
 											</tfoot>
 										</table>
-									</div>
+									</section>
 
-									<hr />
+					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
+							</section>
 						</section>
 					</footer>
 
