--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 								        que busca ofrecer enriquecedores y<br />
 									entretenidos recursos de aprendizaje STEM.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/Bienvenid@ a STEMDOOR.png" alt="" /></a>
+								<a href="recurso 7.html" class="image main"><img src="images/Bienvenid@ a STEMDOOR.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Saber más</a></li>
+									<li><a href="recurso 7.html" class="button large">Saber más</a></li>
 								</ul>
 							</article>
 
@@ -72,10 +72,10 @@
 										<h2><a href="#">Conversando con mi <br />
 										científic@ favorit@</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Recurso 1.jpg" alt="" /></a>
+									<a href="generic.html" class="image fit"><img src="images/Recurso 1.jpg" alt="" /></a>
 									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural que te dará frases de tus científicas o científicos favoritos y si se lo pides también una pequeña reflexión de ellas.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Probar ya</a></li>
+										<li><a href="generic.html" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
@@ -84,7 +84,7 @@
 										<h2><a href="#">Bot de los<br />
 										sentimientos</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Recurso 2.jpg" alt="" /></a>
+									<a href="generic.html" class="image fit"><img src="images/Recurso 2.jpg" alt="" /></a>
 									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural al cuál podrás decirle cómo te sientes y te responderá con una frase relacionada de algún personaje importante.</p>
 									<ul class="actions special">
 										<li><a href="https://scienceloverabi.github.io/SheIs_Proyect/generic.html" class="button">Probar ya</a></li>
@@ -96,16 +96,16 @@
 										<h2><a href="#"> Elige a tu<br />
 										científic@</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Recurso 3.jpg" alt="" /></a>
+									<a href="elements.html" class="image fit"><img src="images/Recurso 3.jpg" alt="" /></a>
 									<p>Acá encontrarás un espacio con documentos y actividades a completar respectivas a la científica o científica que hayas elegido previamente.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Probar ya</a></li>
+										<li><a href="elements.html#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">Recurso 4</span>
-										<h2><a href="#">Perdidos en<br />
+										<h2><a href="Juegos.html">Perdidos en<br />
 										la historia</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Recurso 4.jpg" alt="" /></a>
