--- a/Juegos.html
+++ b/Juegos.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
 	STEMDOOR
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
@@ -46,22 +44,14 @@
 								</header>
 
 								<!-- Text stuff -->
-									<h2>Text</h2>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
-									Finally, this is a <a href="#">link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
+									<h2>Perdidos en la historia</h2>
 									<header>
-										<h2>Heading with a Subtitle</h2>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+										<p>En el siguiente botón podrás encontrar una actividad imprimible llamado "Perdidos en la historia". Consiste en un juego muy parecido a la memoria donde se tiene que emparejar al científico o científica con su respectivo descubrimiento.</p>
 									</header>
+								</ul>
+									<ul class="actions">
+										<li><a href="#" class="button icon solid fa-download">Descargar</a></li>
+									</ul>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
 										<h3>Heading with a Subtitle</h3>
