--- a/Juegos.html
+++ b/Juegos.html
@@ -52,7 +52,17 @@
 									<ul class="actions">
 										<li><a href="#" class="button icon solid fa-download">Descargar</a></li>
 									</ul>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<h2>Crucigramas</h2>
+									<header>
+										<p>Acá encontrarás crucigramas descargables e imprimibles sobre algunos campos de la ciencia.</p>
+									</header>
+									<ul class="actions">
+										<li><a href="#" class="button primary icon solid fa-search">Física</a></li>
+										<li><a href="#" class="button primary icon solid fa-search">Química/a></li>
+										<li><a href="#" class="button primary icon solid fa-search">Biología</a></li>
+										<li><a href="#" class="button primary icon solid fa-search">Informática</a></li>
+									</ul>
+						<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
 										<h3>Heading with a Subtitle</h3>
 										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
