--- a/Juegos.html
+++ b/Juegos.html
@@ -58,16 +58,21 @@
 									</header>
 									<ul class="actions">
 										<li><a href="#" class="button primary icon solid fa-search">Física</a></li>
-										<li><a href="#" class="button primary icon solid fa-search">Química/a></li>
+										<li><a href="#" class="button primary icon solid fa-search">Química</a></li>
 										<li><a href="#" class="button primary icon solid fa-search">Biología</a></li>
 										<li><a href="#" class="button primary icon solid fa-search">Informática</a></li>
 									</ul>
-						<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
-										<h3>Heading with a Subtitle</h3>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+										<h2>Acertijos</h2>
+										<p>¿Te animas a tratar de resolver acertijos que intentarán jugar con tu mente? Elige el tema que desees he intenta resolver el acertijo.</p>
 									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">Agujeros negros</a></li>
+										<li><a href="#" class="button">Viajes en el tiempo</a></li>
+										<li><a href="#" class="button">Modificación de ADN</a></li>
+										<li><a href="#" class="button">Alquimia</a>
+									</ul>
+						<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
 										<h4>Heading with a Subtitle</h4>
 										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
