--- a/Juegos.html
+++ b/Juegos.html
@@ -79,6 +79,7 @@
 											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
 											<!-- Break -->
+					</div>
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
