--- a/Juegos.html
+++ b/Juegos.html
@@ -75,9 +75,9 @@
 								<!-- Image -->
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="Recurso 4.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="Crucigrama.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="Acertijos.jpg" alt="" /></span></div>
 											<!-- Break -->
 					</div>
 				<!-- Footer -->
